# F1DP

./: .gitignore  README.md  go.mod  helper.asm  main.go
F1DPInstaller/: CMakeLists.txt  main.c  md5.c  md5.h
F1DPInstaller/generated_binaries/: compile.py
F1DPLoader/: loader.asm
F1DPPatcher/: CMakeLists.txt  Compilation flags.txt  PatcherPatcher.c  main.c  openwatcom2.yaml
F1DPPatcher/CLibs/: CLibs.c  CLibs.txt  conio.c  conio.h  ctype.c  ctype.h  fcntl.c  fcntl.h  io.c  io.h  math.c  math.h  stdio.c  stdio.h  stdlib.c  stdlib.h  string.c  string.h  unistd.c  unistd.h
F1DPPatcher/FixtPatches/: FixtPatches.c  FixtPatches.h
F1DPPatcher/GameAddrs/: CStdFuncs.h  FalloutEngine.h
F1DPPatcher/HighResPatches/: F_Art.c  F_Art.h  F_File.c  F_File.h  F_Mapper.c  F_Mapper.cNOTDONE  F_Mapper.h  F_Objects.c  F_Objects.h  F_Windows.c  F_Windows.h  HighResPatchMain.c  HighResPatchMain.h  HighResPatches.c  HighResPatches.cNOTDONE  HighResPatches.h  HighResPatches.hNOTDONE  fixes_dialog.c  fixes_dialog.h  fixes_maps.c  fixes_maps.cNOTDONE  fixes_maps.h  fixes_other.c  fixes_other.h  fixes_win_general.c  fixes_win_general.h
F1DPPatcher/My IDA databases/: f1_res Fixt672alpha DADi590 IDA Pro 7.0.cDecompiled  f1_res Fixt672alpha DADi590 IDA Pro 7.0.idb  f1_res Fixt672alpha Edw590 IDA Pro 7.0.idb
F1DPPatcher/My IDA databases/sFall1 1.8/: How to read its code.txt  sFall1 1.8 DADi590 IDA Pro 7.0.idb
F1DPPatcher/OtherHeaders/: General.h  GlobalEXEAddrs.h  GlobalVars.h  PatcherPatcher.h
F1DPPatcher/PatcherPatcher/: PatcherPatcher.c  PatcherPatcher.h
F1DPPatcher/SFall1Patches/: ,Crafty's sFall1 versions used.txt  AI.c  AI.h  AmmoMod.c  AmmoMod.h  AnimationsAtOnceLimit.c  AnimationsAtOnceLimit.h  Bugs.c  Bugs.h  Credits.c  Credits.h  Criticals.c  Criticals.h  Dadi590_NewUnk1.c  Dadi590_NewUnk1.h  DebugMode.c  DebugMode.h  Define.h  FalloutEngine.h  Inventory.c  Inventory.h  LoadGameHook.c  LoadGameHook.h  MainMenu.c  MainMenu.h  PartyControl.c  PartyControl.h  Quests.c  Quests.h  SFall1Main.c  SFall1Main.h  SFall1Patches.c  SFall1Patches.h  Sound.c  Sound.h  dinput.c  dinput.h  sFall1Main.c  sFall1Main.h  timer.cNOTDONE  (+2 more)
F1DPPatcher/TeamXPatches/: TeamXPatches.c  TeamXPatches.h
F1DPPatcher/Utils/: BlockAddrUtils.c  BlockAddrUtils.h  EXEPatchUtils.c  EXEPatchUtils.h  General.h  GlobalEXEAddrs.h  GlobalVars.h  IniUtils.c  IniUtils.h
F1DPPatcher/generated_binaries/: compile.py
Fallout1DOSPatches/: BlockAddrUtils.c  CMakeLists.txt  Compilation flags.txt  EXEPatchUtils.c  ExeNewFuncs.c  GameAddrs.h  GameStandardCFuncs.h  GameStdCFuncs.c  General.c  General.h  PatchPatcher.c  PatcherPatcher.c  main.c  main.mbr
Fallout1DOSPatches/CFuncs/: CFuncs.c  fcntl.c  fcntl.h  io.c  io.h  stdio.c  stdio.h  stdlib.c  stdlib.h  string.c  string.h  unistd.c  unistd.h
Fallout1DOSPatches/ExeNewFuncs/: TestFunc.c
Fallout1DOSPatches/GameAddrs/: Funcs.h  Strings.h
Fallout1DOSPatches/Headers/: AddressUtils.h  BlockAddrUtils.h  EXEPatchUtils.h  GameAddrs.h  GameStdCFuncs.h  General.h  Logger.h  MainMenu.h  PatchPatcher.h
Fallout1DOSPatches/OtherHeaders/: General.h  GlobalEXEAddrs.h  PatcherPatcher.h
Fallout1DOSPatches/Patches/: MainMenu.c
Fallout1DOSPatches/SFall1Patches/: Criticals.c  Criticals.h  MainMenu.c  MainMenu.h  SFall1Patches.c  SFall1Patches.h
Fallout1DOSPatches/Utils/: BlockAddrUtils.c  BlockAddrUtils.h  EXEPatchUtils.c  EXEPatchUtils.h  IniUtils.c  IniUtils.h
Fallout1DOSPatches/assembly_helper/: helper.asm  helper.lst  helper.map  helper.sbr
Fallout1DOSPatchesLoader/: loader.asm  loader.sbr
FuncPatches/: dialog_out_.go
